# MultimodalNailClassification

./: .gitignore  dataset.py  pyproject.toml  train.ipynb
datasets/: .gitignore  dataset.dvc  preprocessed_dataset.dvc
src/: augmentation.py  dataset.py  evaluation.py  focal_loss.py  train.ipynb  train.py  train_TL.py
src/model_archs/: Resnet18_attention.py  Resnet18_attention_v2.py  Resnet18_attention_v3.py  Resnet18_attention_v4.py  Resnet34_attention.py  Resnet34_attention_v2.py  Resnet34_attention_v3.py  Resnet50_Mlp.py  Resnet50_attention.py
src/model_archs/Resnets/: Resnet18_attention.py  Resnet18_attention_v2.py  Resnet18_attention_v3.py  Resnet18_attention_v4.py  Resnet34_attention.py  Resnet34_attention_v2.py  Resnet34_attention_v3.py  Resnet50_Mlp.py  Resnet50_TL.py  Resnet50_attention.py
src/model_archs/convnexts/: Convnext_TL.py  Convnext_small_TL.py  Convnext_tiny.py  Convnext_tiny_v2.py
src/model_archs/efficientnets/: efficientnet_B0.py
src/model_archs/mobilenets/: Mobilenet_V3_TL.py
src/utils/: calculate_dataset_stats.py  calculate_statistics.py  get_metadata.py  get_model.py  prepare_dataset.py  split_dataset.py  visualize_augmentations.py
tests/: test_calculate_dataset_stats.py  test_dataset_stats.py
tools/: preprocessing.py  split_dataset.py  validate_dataset.py
tools/dataset/: count_nails.py  vaidate_filenames.py
tools/dataset_checks/: check_duplicates.py  check_filenames.py  count_nails.py
tools/dataset_tools/: check_duplicates.py  validate_filenames.py
utils/: check_duplicates.py
(+2 files in other folders)
